<resources>
    <string name="app_name">WeightTrackingApp_ChelseaCacho</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="back_to_login">Back to Login</string>
    <string name="add_entry">Add Entry</string>
    <string name="weight">Weight</string>
    <string name="current_goal">Current Goal:</string>
</resources>